tests/suite/snapshots/suite__check__tests__check__bad-global3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-global3.xi:1:1]
   │
 1 │ x: int = foo()
   · ───┬──  
   ·    ╰──── Expected int but found bool
───╯

